--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+
 # Compiled class file
 *.class
 
@@ -18,6 +21,17 @@
 *.zip
 *.tar.gz
 *.rar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
