--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
